j--/tests/pass/ShiftAssign.java
package pass;

public class ShiftAssign {
	public int eval(int a, int b) {
		a >>>= b;
		return a;
	}
}
