j--/tests/fail/ShiftAssign.java
package fail;

public class ShiftAssign {

	public static void main(String args[]) {
		System.out.println("c" >>>= "b");
	}

}
